--- a/src/app/pages/search-monitor-all/search-monitor-all.component.scss
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.scss
@@ -118,6 +118,10 @@
     flex: 1 1 auto;
   }
 
+.font-option {
+    font-size: 10px
+}
+
 ::ng-deep .mat-ink-bar {
     position: absolute !important;
     bottom: 0 !important;
