remove btn add track no

--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -217,12 +217,11 @@
                           </div>
                         </div>
                       </mat-card-content>
-                      <mat-card-actions class="text-right" *ngIf="user.roles[0]==='stockstaff'">
-
+                      <!-- <mat-card-actions class="text-right" *ngIf="user.roles[0]==='stockstaff'">
                         <button mat-icon-button color="accent">
                           <mat-icon aria-label="Example icon-button with a heart icon">edit</mat-icon>
                         </button>
-                      </mat-card-actions>
+                      </mat-card-actions> -->
                     </mat-card>
                   </div>
                 </div>
