--- a/src/app/modal/modal-add-box/modal-add-box.component.scss
+++ b/src/app/modal/modal-add-box/modal-add-box.component.scss
@@ -28,3 +28,10 @@
     min-height: inherit !important;
     max-height: inherit !important;
 }
+
+.margin-lef {
+    margin-left: 21% !important;
+}
+.margin-lef-select {
+    margin-left: 55% !important;
+}
