--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -106,7 +106,7 @@
                     <span>{{itm.customer.tel}}</span></p>
                   <p class="ml-3"><small>{{itm.paymenttype.name}}</small></p>
                   <div class="row" *ngFor="let prod of label2.productlist">
-                    <p class="ml-3 mt-2" *ngIf="prod.option[0].value.length > 0">{{prod.name}}</p>
+                    <p class="ml-3 mt-2">{{prod.name}}</p>
                     <div class="col-12">
                       <div class="row ml-1 mr-1" *ngFor="let opt of prod.option">
                         <div class="col-4 col-md-3 col-lg-2 pt-1 pb-1 pl-0 pr-0 border-prod text-center" *ngFor="let val of opt.value">
@@ -125,7 +125,7 @@
                       print
                     </mat-icon>
                   </button>
-                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff' && i > 0">
+                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
                     <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
                   </button>
                 </mat-card-actions>
