--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -126,7 +126,7 @@
                     </mat-icon>
                   </button>
                   <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff' && itm.labels.length > 1">
-                    <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
+                    <mat-icon aria-label="Example icon-button with a heart icon" (click)="deleteLabel(label2)">delete</mat-icon>
                   </button>
                 </mat-card-actions>
               </mat-card>
