--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -140,7 +140,7 @@
                           <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                         </button>
                         <button mat-icon-button color="accent">
-                          <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm2)">print
+                          <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm2,item2,label2)">print
                           </mat-icon>
                         </button>
                         <button mat-icon-button color="accent" *ngIf="itm2.labels.length > 1">
