--- a/src/app/pages/search-monitor-all/search-monitor-all.component.scss
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.scss
@@ -122,6 +122,10 @@
     font-size: 10px
 }
 
+.bg-label-print{
+    background-color: #e2e2e2 !important;
+}
+
 ::ng-deep .mat-ink-bar {
     position: absolute !important;
     bottom: 0 !important;
