--- a/src/app/pages/stockpack/stockpack.component.scss
+++ b/src/app/pages/stockpack/stockpack.component.scss
@@ -7,6 +7,11 @@
     border-radius: 2%;
 }
 
+.bg-label-print{
+    background-color: #e2e2e2 !important;
+}
+
+
 .border-bt{
     border-bottom: solid 1px #e2e2e2;
 }
