--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -29,7 +29,7 @@
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'">
+            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'" (click)="printLabelAll(item)">
               <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
               </mat-icon>
             </button>
@@ -48,7 +48,7 @@
 
         <div class="row border-bottom" *ngIf="item.status === 'waitwithdrawal'">
           <div class="col-12 col-md-6" *ngFor="let itm of item.orders">
-            <mat-card class="m-3">
+            <mat-card class="m-3 box-shadow-false">
               <mat-card-header>
                 <mat-card-subtitle>
                   <span>ออเดอร์: </span>
@@ -83,7 +83,7 @@
             </span>
             <div class="col-12 col-md-6" style="display: inline-block;vertical-align: top"
               *ngFor="let label2 of itm.labels; let i=index">
-              <mat-card class="m-3" [ngClass]="label2.eprint === true ? 'bg-label-print' : ''">
+              <mat-card class="m-3" [ngClass]="label2.eprint === true ? 'bg-label-print , box-shadow-true' : 'box-shadow-false'">
                 <mat-card-content
                   *ngIf="item.status === 'waitpack' || item.status === 'waitshipping' || item.status === 'complete'">
                   <div class="row">
@@ -121,7 +121,7 @@
                     <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                   </button>
                   <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
-                    <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm)">
+                    <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(label2)">
                       print
                     </mat-icon>
                   </button>
