--- a/src/app/pages/stockpack/stockpack.component.scss
+++ b/src/app/pages/stockpack/stockpack.component.scss
@@ -128,6 +128,16 @@
     font-size: 10px
 }
 
+.box-shadow-true {
+    -webkit-box-shadow: 2px 2px 20px -5px rgb(67, 67, 67);
+    -moz-box-shadow: 2px 2px 20px -5px rgba(161,0,161,1);
+    box-shadow: 2px 2px 20px -5px rgb(141, 141, 141);
+}
+
+.box-shadow-false {
+    box-shadow: 2px 2px 20px -5px rgba(255, 174, 192, 0.68);
+}
+
 ::ng-deep .mat-ink-bar {
     position: absolute !important;
     bottom: 0 !important;
